--- a/src/layout.scss
+++ b/src/layout.scss
@@ -1,10 +1,29 @@
+@import './responsive.scss';
+
 .layout{
-    background-color: rebeccapurple;
     height: 100vh;
     max-width: 1366px;
     margin-right: auto;
     margin-left: auto;
     padding-left: 20px;
     padding-right: 20px;
+
+
+    @include lg{
+        background-color: rgb(237, 237, 244);
+        max-width: 1280px;
+    }
+
+    @include md{
+        background-color: rgb(238, 242, 238);
+        max-width: 768px;
+    }
+
+    @include sm{
+        background-color: rgb(225, 220, 220);
+        max-width: 640px;
+    }
+
+
 
 }
