--- a/src/layout.scss
+++ b/src/layout.scss
@@ -7,6 +7,8 @@
     margin-left: auto;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+    flex-direction: column;
 
 
     @include lg{
@@ -22,6 +24,10 @@
     @include sm{
         background-color: rgb(225, 220, 220);
         max-width: 640px;
+    }
+
+    .content{
+        flex:1;
     }
 
 
